feat: restructure project by adding gateway and service directories, updating Docker configurations, and enhancing shared library
- Introduced a new API Gateway with routing and service discovery capabilities.
- Added independent microservices for authentication, posts, and users.
- Updated Dockerfiles and .dockerignore for each service and the gateway.
- Enhanced shared library with enums and types for better inter-service communication.
- Removed deprecated files and improved environment configuration examples.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,38 @@
-node_modules
-npm-debug.log
+# Dependencies
+**/node_modules
+**/dist
+
+# Environment and secrets
+**/.env
+**/.env.*
+!**/.env.example
+
+# Development files
 .git
 .gitignore
-README.md
-.env
-.nyc_output
-coverage
 .vscode
 .idea
+.DS_Store
+
+# Logs and debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+**/logs
+**/*.log
+
+# Test coverage
+.nyc_output
+**/coverage
+
+# Documentation
 *.md
 !README.md
+
+# Keep necessary files
+!shared/
+!scripts/
+!gateway/
+!services/
+!package*.json
+!tsconfig*.json
