--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,16 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Cursor files
+.cursorrules
+.cursorignore
+.cursorignore.md
+.cursorignore.txt
+.cursorignore.yml
+.cursorignore.yaml
+.cursorignore.json
+.cursorignore.jsonc
+
+# Misc
+.DS_Store
