--- a/package.json
+++ b/package.json
@@ -1,57 +1,32 @@
 {
-  "name": "microservices",
+  "name": "atlas",
   "version": "1.0.0",
-  "description": "A modular Nest.js monorepo — a central hub of APIs and services designed to be scalable, pluggable, and future-ready.",
-  "main": "dist/main.js",
-  "engines": {
-    "node": ">=20.0.0"
-  },
+  "private": true,
   "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"services/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main.js",
-    "lint": "eslint \"{src,services,test}/**/*.ts\" --fix",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage"
-  },
-  "keywords": [
-    "nestjs",
-    "monorepo",
-    "api",
-    "microservices",
-    "modular",
-    "typescript"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/core": "^11.1.6",
-    "@nestjs/platform-express": "^11.1.6",
-    "dotenv": "^16.6.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "install:all": "npm install && npm install --prefix shared && npm run build --prefix shared && npm install --prefix gateway && for dir in services/*/; do npm install --prefix \"$dir\"; done",
+    "start": "ts-node scripts/run-services.ts start:prod",
+    "dev": "ts-node scripts/run-services.ts start:dev",
+    "build": "ts-node scripts/run-services.ts build",
+    "build:shared": "npm run build --prefix shared",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:services": "ts-node scripts/run-services.ts test",
+    "format": "prettier --write \"**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "create-service": "ts-node scripts/create-service.ts"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/schematics": "^11.0.7",
-    "@nestjs/testing": "^11.1.6",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "prettier": "^3.6.2",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0",
     "vitest": "^3.2.4"
   }
 }
