feat: implement API Gateway and user service with health checks and service registration
- Added a new API Gateway to manage routing and service discovery for microservices.
- Introduced User service with CRUD operations and health check endpoints.
- Implemented service registration and heartbeat monitoring for dynamic service management.
- Updated package.json and README to reflect new service structure and configurations.
- Removed deprecated posts service and its associated files to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install:all": "npm install && npm install --prefix shared && npm run build --prefix shared && npm install --prefix gateway && for dir in services/*/; do npm install --prefix \"$dir\"; done",
+    "install:all": "npm install && npm install --prefix shared && npm run build --prefix shared && for dir in services/*/; do npm install --prefix \"$dir\"; done",
     "start": "ts-node scripts/run-services.ts start:prod",
     "dev": "ts-node scripts/run-services.ts start:dev",
     "build": "ts-node scripts/run-services.ts build",
