--- a/services/auth/.env.example
+++ b/services/auth/.env.example
@@ -3,10 +3,10 @@ NODE_ENV=development
 PORT=8001
 
 # Gateway Configuration
-GATEWAY_URL=http://localhost:3000
+GATEWAY_PORT=3000
 
 # Registry Configuration
-REGISTRY_URL=http://localhost:3001
+REGISTRY_PORT=3001
 REG_KEY=insert_registry_key_here
 
 # Service-specific Configuration
