--- a/services/user/package.json
+++ b/services/user/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@atlas/users-service",
+  "name": "@atlas/user-service",
   "version": "1.0.0",
-  "description": "Users service for Atlas",
+  "description": "User service for Atlas",
   "main": "dist/src/main.js",
   "scripts": {
     "build": "nest build",
@@ -16,20 +16,12 @@
   "dependencies": {
     "@atlas/shared": "file:../../shared",
     "@nestjs/common": "^11.1.6",
-    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
-    "axios": "^1.12.2",
+    "@nestjs/config": "^4.0.0",
+    "axios": "^1.7.4",
     "dotenv": "^16.6.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/testing": "^11.1.6",
-    "@types/express": "^4.17.21",
-    "@types/node": "^24.3.1",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
   }
 }
