fix: update service creation script and templates for correct gateway path and remove Dockerfile
- Corrected the path to the gateway .env file in the service creation script.
- Removed Dockerfile template from service generation as it is no longer needed.
- Updated service run script to install dependencies for all services and adjusted service discovery logic.
- Enhanced controller template with uptime formatting for better service monitoring.

--- a/scripts/templates/env.template
+++ b/scripts/templates/env.template
@@ -3,10 +3,10 @@ NODE_ENV=development
 PORT={{SERVICE_PORT}}
 
 # Gateway Configuration
-GATEWAY_URL=http://localhost:3000
+GATEWAY_PORT=3000
 
 # Registry Configuration
-REGISTRY_URL=http://localhost:3001
+REGISTRY_PORT=3001
 REG_KEY={{REG_KEY}}
 
 # Service-specific Configuration
