fix: update main entry point in gateway package.json
- Changed the main entry point from "dist/main.js" to "dist/src/main.js" to align with the updated build structure.
- This adjustment ensures that the gateway service correctly references the compiled output after building.

--- a/services/gateway/package.json
+++ b/services/gateway/package.json
@@ -2,7 +2,7 @@
   "name": "@atlas/gateway",
   "version": "1.0.0",
   "description": "API Gateway for Atlas Microservices",
-  "main": "dist/main.js",
+  "main": "dist/src/main.js",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
