feat: add environment setup script for service configuration
- Introduced a new script `setup-env.ts` to automate the generation of environment files for services based on `.env.example` templates.
- Updated `package.json` to include a new command for running the environment setup script.
- This enhancement streamlines the configuration process for services, ensuring consistent environment variable management.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:services": "ts-node scripts/run-services.ts test",
     "format": "prettier --write \"**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "create-service": "ts-node scripts/create-service.ts"
+    "create-service": "ts-node scripts/create-service.ts",
+    "env": "ts-node scripts/setup-env.ts"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
