--- a/scripts/templates/env.template
+++ b/scripts/templates/env.template
@@ -1,8 +1,9 @@
-# {{SERVICE_NAME}} Service Configuration
-NODE_ENV=development
+# {{ServiceName}} Service Configuration
+HOSTNAME=localhost
 PORT={{SERVICE_PORT}}
 
 # Gateway Configuration
+GATEWAY_HOSTNAME=localhost
 GATEWAY_PORT=3000
 
 # Registry Configuration
