chore: update README and configuration templates for improved clarity and consistency
- Revised the README to clarify the deployment options for the monorepo and individual services.
- Updated environment variable names in templates and examples to standardize on 'HOST' and 'REGISTRY_KEY'.
- Enhanced service registration logging to include host information for better debugging.
- Added a new entry to .gitignore for the 'kill.sh' script to prevent accidental commits.
- These changes aim to improve documentation and maintain consistency across service configurations.

--- a/scripts/templates/env.template
+++ b/scripts/templates/env.template
@@ -1,14 +1,12 @@
 # {{ServiceName}} Service Configuration
-HOSTNAME=localhost
+HOST=localhost
 PORT={{SERVICE_PORT}}
 
-# Gateway Configuration
-GATEWAY_HOSTNAME=localhost
+# Gateway and Registry Configuration
+GATEWAY_HOST=localhost
 GATEWAY_PORT=3000
-
-# Registry Configuration
 REGISTRY_PORT=3001
-REG_KEY={{REG_KEY}}
+REGISTRY_KEY={{REG_KEY}}
 
 # Service-specific Configuration
-# Add any service-specific environment variables here
+# Insert additional keys below that only belongs to this service
