--- a/services/auth/.env.example
+++ b/services/auth/.env.example
@@ -1,15 +1,16 @@
-# AUTH Service Configuration
-NODE_ENV=development
+# Auth Service Configuration
+HOST=localhost
 PORT=8001
 
-# Gateway Configuration
+# Gateway and Registry Configuration
+GATEWAY_HOST=localhost
 GATEWAY_PORT=3000
-
-# Registry Configuration
 REGISTRY_PORT=3001
-REG_KEY=insert_registry_key_here
+REGISTRY_KEY=insert_reg_key_here
 
 # Service-specific Configuration
+# Insert additional keys below that only belongs to this service
+
 # Database Configuration
 DATABASE_URL=insert_connection_url_here
 
