--- a/services/gateway/.env.example
+++ b/services/gateway/.env.example
@@ -1,11 +1,10 @@
 # Atlas Gateway Configuration
-GATEWAY_PORT=3000
+HOST=localhost
+PORT=3000
 
-# Registry
+# Registry Configuration
 REGISTRY_PORT=3001
-
-# Secret Key to Register a Service
-REG_KEY=insert_secret_key_here
+REGISTRY_KEY=insert_reg_key_here
 
 # Heartbeat Interval
 HEARTBEAT_INTERVAL_MS=30000
