--- a/services/user/.env.example
+++ b/services/user/.env.example
@@ -1,13 +1,12 @@
-# USER Service Configuration
-NODE_ENV=development
+# User Service Configuration
+HOST=localhost
 PORT=8002
 
-# Gateway Configuration
+# Gateway and Registry Configuration
+GATEWAY_HOST=localhost
 GATEWAY_PORT=3000
-
-# Registry Configuration
 REGISTRY_PORT=3001
-REG_KEY=your_registry_key_here
+REGISTRY_KEY=insert_reg_key_here
 
 # Service-specific Configuration
-# Add any service-specific environment variables here
+# Insert additional keys below that only belongs to this service
