fix: update service creation script and environment templates for registry key consistency
- Renamed environment variable from `REG_KEY` to `REGISTRY_KEY` in the service creation script and templates for clarity and consistency.
- Adjusted default values in the service creation script to reflect the new naming convention.
- These changes enhance the uniformity of environment variable management across the microservices architecture.

--- a/scripts/templates/env.template
+++ b/scripts/templates/env.template
@@ -6,7 +6,7 @@ PORT={{SERVICE_PORT}}
 GATEWAY_HOST=localhost
 GATEWAY_PORT=3000
 REGISTRY_PORT=3001
-REGISTRY_KEY={{REG_KEY}}
+REGISTRY_KEY={{REGISTRY_KEY}}
 
 # Service-specific Configuration
 # Insert additional keys below that only belongs to this service
