chore: update docker-compose configuration for improved service management
- Added comments to the docker-compose file for clarity on local development usage.
- Changed PostgreSQL user from `konek` to `user` for consistency.
- Updated service Dockerfile paths to reflect the new directory structure.
- Removed unused service definitions to streamline the configuration.
- Standardized network naming to `atlas-network` for better clarity.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+# Atlas Microservices - Local Development
+# Run: docker-compose up --build
+# This will start all services with proper dependencies and health checks
+
 services:
   # Infrastructure services - start first
   redis:
@@ -14,34 +18,31 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - konek-atlas-network
+      - atlas-network
 
   postgres:
     image: postgres:17-alpine
     environment:
       POSTGRES_DB: atlas
-      POSTGRES_USER: konek
+      POSTGRES_USER: user
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U konek -d atlas"]
+      test: ["CMD-SHELL", "pg_isready -U user -d atlas"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - konek-atlas-network
+      - atlas-network
 
   # Gateway service - starts after infrastructure
   gateway:
     build:
       context: .
-      dockerfile: Dockerfile
-      args:
-        SERVICE_NAME: gateway
-        SERVICE_PORT: 3000
+      dockerfile: ./services/gateway/Dockerfile
     ports:
       - "3000:3000"
       - "3001:3001"
@@ -60,16 +61,13 @@ services:
       timeout: 10s
       retries: 3
     networks:
-      - konek-atlas-network
+      - atlas-network
 
   # Microservices - start after gateway
   auth-service:
     build:
       context: .
-      dockerfile: Dockerfile
-      args:
-        SERVICE_NAME: auth
-        SERVICE_PORT: 8001
+      dockerfile: ./services/auth/Dockerfile
     ports:
       - "8001:8001"
     env_file:
@@ -79,15 +77,12 @@ services:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - konek-atlas-network
+      - atlas-network
 
   user-service:
     build:
       context: .
-      dockerfile: Dockerfile
-      args:
-        SERVICE_NAME: user
-        SERVICE_PORT: 8002
+      dockerfile: ./services/user/Dockerfile
     ports:
       - "8002:8002"
     env_file:
@@ -97,61 +92,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - konek-atlas-network
-
-  raffle-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        SERVICE_NAME: raffle
-        SERVICE_PORT: 8003
-    ports:
-      - "8003:8003"
-    env_file:
-      - ./services/raffle/.env
-    depends_on:
-      gateway:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - konek-atlas-network
-
-  task-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        SERVICE_NAME: task
-        SERVICE_PORT: 8004
-    ports:
-      - "8004:8004"
-    env_file:
-      - ./services/task/.env
-    depends_on:
-      gateway:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - konek-atlas-network
-
-  wallet-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        SERVICE_NAME: wallet
-        SERVICE_PORT: 8005
-    ports:
-      - "8005:8005"
-    env_file:
-      - ./services/wallet/.env
-    depends_on:
-      gateway:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - konek-atlas-network
+      - atlas-network
 
 volumes:
   redis_data:
@@ -160,4 +101,4 @@ volumes:
     driver: local
 
 networks:
-  konek-atlas-network:
+  atlas-network:
