feat: add Docker support and configuration for auth, gateway, and user services
- Introduced Dockerfile and .dockerignore for auth, gateway, and user services to streamline containerization.
- Added tsconfig.build.json for better TypeScript compilation management in each service.
- Updated package.json files to ensure correct entry points and dependencies.
- Enhanced logging in the user service for improved service registration with the gateway.
- Improved tsconfig configurations for better structure and clarity across services.

--- a/services/auth/tsconfig.json
+++ b/services/auth/tsconfig.json
@@ -2,10 +2,20 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "rootDir": "./",
     "baseUrl": "./",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "target": "ES2020",
+    "useDefineForClassFields": false,
+    "paths": {
+      "@atlas/shared": ["../../shared"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test"
+  ]
 }
