refactor: update environment variable naming for consistency
- Renamed HOST to HOSTNAME and GATEWAY_HOST to GATEWAY_HOSTNAME in env.template for improved clarity and consistency.
- Updated main.template.ts to reflect the changes in environment variable names, ensuring proper configuration retrieval.

--- a/scripts/templates/env.template
+++ b/scripts/templates/env.template
@@ -1,10 +1,11 @@
 # {{ServiceName}} Service Configuration
-HOST=localhost
+HOSTNAME=localhost
 PORT={{SERVICE_PORT}}
 
 # Gateway and Registry Configuration
-GATEWAY_HOST=localhost
+GATEWAY_HOSTNAME=localhost
 GATEWAY_PORT=3000
+
 REGISTRY_PORT=3001
 REGISTRY_KEY={{REGISTRY_KEY}}
 
